<resources>
    <string name="enter">Войти</string>
    <string name="information_tape">Информационная лента</string>
    <string name="news_feed">Лента новостей</string>
    <string name="settings">Настройки</string>
    <string name="tags">Теги</string>
    <string name="about">О нас</string>
    <string name="add_publication">Добавить публикацию</string>
    <string name="my_publication">Мои публикации</string>
    <string name="my_comments">Мои комментарии</string>
    <string name="saved">Сохранённое</string>
    <string name="do_saved">Сохраненое</string>
    <string name="chat">Чат</string>
    <string name="support">Поддержка</string>
    <string name="important_to_know">Важно знать</string>
    <string name="bank_of_vacancy">Банк вакансий</string>
    <string name="last">Последние</string>
    <string name="best">Лучшее</string>
    <string name="news">Новости</string>
    <string name="interviews">Опросы</string>
    <string name="app_name">Навигатор Молодого Педагога</string>
    <string name="tape">Лента</string>
    <string name="registration">Регистрация</string>
    <string name="auth">Авторизация</string>
    <string name="login_hint">e-mail или моб. телефон</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="full_name">ФИО</string>
    <string name="birthday">Дата рождения</string>
    <string name="work_place">Место работы (учёбы)</string>
    <string name="position">Должность</string>
    <string name="experience">Стаж работы</string>
    <string name="is_trade_unionist">Член профсоюза?</string>
    <string name="trade_union_ticket_number">№ профсоюзного билета</string>
    <string name="email">E-mail</string>
    <string name="or">Или</string>
    <string name="phone">Номер телефона</string>
    <string name="agreement">Согласие на обработку персональных данных</string>
    <string name="need_agreement">Необходимо подтвердить согласие на обработку персональных данных</string>
    <string name="do_restore_password">Получить пароль</string>
    <string name="restore_password_text">Введите Ваш e-mail или моб. телефон указанный при регистрации</string>
    <string name="more">Читать далее&#8230;</string>
    <string name="complain">Пожаловаться</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="restore_password">Востановление пароля</string>
    <string name="search_publication">Поиск публикаций</string>
    <string name="search">Поиск</string>
    <string name="add_tag">Добавить тег</string>
    <string name="publications">Публикации</string>
    <string name="any">Любые</string>
    <string name="only_text">Только текст</string>
    <string name="with_document">С документом</string>
    <string name="view_document">Посмотреть документ</string>
    <string name="find">Найти</string>
    <string name="your_account_succesfuly_created">Ваш аккаунт успешно создан</string>
    <string name="account_created_text">На Ваш E-mail или моб. телефон высланы регистрационные данные</string>
    <string name="do_auth">Авторизоваться</string>
    <string name="indicate_email">Укажите E-mail</string>
    <string name="indicate_password">Укажите пароль</string>
    <string name="indicate_full_name">Укажите ФИО</string>
    <string name="indicate_birthday">Укажите дату рождения</string>
    <string name="indicate_work_or_learn_place">Укажите место работы или учёбы</string>
    <string name="work_or_learn_place">Место работы или учёбы</string>
    <string name="indicate_experience">Укажите опыт</string>
    <string name="indicate_number_of_unionist_ticket">Укажите номер профсоюзного билета</string>
    <string name="wrong_unionist_ticket">Номер профсоюзного билета должен включать в себя от 6ти до 8ми цифр</string>
    <string name="indicate_district">Укажите округ</string>
    <string name="number_of_unionist_ticket">Номер профсоюзного билета</string>
    <string name="indicate_login">Укажите E-mail или номер моб. телефона</string>
    <string name="registration_error">Ошибка регистрации</string>
    <string name="auth_error">Неправильный логин или пароль</string>
    <string name="restore_password_error">Ошибка восстановления пароля</string>
    <string name="no_data">Не данных</string>
    <string name="error_throwed">Произошла ошибка</string>
    <string name="comments">Комментарии</string>
    <string name="open_branch">Раскрыть ветвь</string>
    <string name="added">Добавлено</string>
    <string name="comment_text">Текст комментария</string>
    <string name="zero">0</string>
    <string name="application">Приложение</string>
    <string name="profile">Профиль</string>
    <string name="night_theme">Ночная тема</string>
    <string name="push_notification">PUSH-уведомления</string>
    <string name="sound">Звук</string>
    <string name="a">A</string>
    <string name="example_publication_and_comment">Пример публикации и комментария</string>
    <string name="name">Имя</string>
    <string name="publication_time">Время публикации</string>
    <string name="title_example">Пример заголовка</string>
    <string name="text_example">Пример текста</string>
    <string name="save">Сохранить</string>
    <string name="proposal">Предложения</string>
    <string name="applicant">Я соискатель</string>
    <string name="post_vacancy">Разместить вакансию</string>
    <string name="my_vacancy">Мои вакансии</string>
    <string name="view_resume">Посмотреть резюме</string>
    <string name="my_resume">Моё резюме</string>
    <string name="view_proposals">Посмотреть предложения</string>
    <string name="rating">Рейтинг</string>
    <string name="subscribers">Подписч.</string>
    <string name="pubicationss">Публикаций</string>
    <string name="commentaries">Коммент.</string>
    <string name="you_want_exit">Вы хотите выйти?</string>
    <string name="subscribed">Подписано</string>
    <string name="not_define">Не указано</string>
    <string name="title">Заголовок</string>
    <string name="publication_text">Текст публикации</string>
    <string name="preview">Предпросмотр</string>
    <string name="do_public">Опубликовать</string>
    <string name="will_set_current_time">Будет указано текущее время</string>
    <string name="you">Вы</string>
    <string name="organization_name">Название организации</string>
    <string name="vacancy">Вакансия</string>
    <string name="salary">Размер заработной платы</string>
    <string name="city">Город</string>
    <string name="required_experience">Требуемый опыт</string>
    <string name="type_of_employment">Тип занятости</string>
    <string name="responsibilities">Обязанности</string>
    <string name="choose_type_of_institution">Выберите тип учреждения</string>
    <string name="school">Школа</string>
    <string name="college">Колледж</string>
    <string name="university">ВУЗ</string>
    <string name="create_vacancy">Создать вакансию</string>
    <string name="full">Полная</string>
    <string name="partial">Частичная</string>
    <string name="validation_empty_field">Поле \"%1$s\" должно быть заполнено</string>
    <string name="validation_only_numbers">Поле \"%1$s\" должно содержать только числовые значения</string>
    <string name="validation_empty">%1$s</string>
    <string name="delete">Удалить</string>
    <string name="prolong">Продлить</string>
    <string name="cost_roubles"><![CDATA[<b>%s</b> рублей]]></string>
    <string name="responsibilities_text"><![CDATA[<b>Обязанности: </b> %1$s]]></string>
    <string name="remains_days_format"><![CDATA[Осталось: <b>%1$d дней</b> ]]></string>
    <string name="type_of_employment_formatted"><![CDATA[%1$s занятость]]></string>
    <string name="district_council_number"><![CDATA[Межрайонный совет № %1$d]]></string>
    <string name="appropriate_vacancies_count"><![CDATA[Подходящих вакансий: %1$d]]></string>
    <string name="unknown">Неизвестный</string>
    <string name="create_resume">Создать резюме</string>
    <string name="career_objective">Желаемая должность</string>
    <string name="district_council">Межрайонный совет</string>
    <string name="education">Образование</string>
    <string name="attach_resume">Прикрепить резюме</string>
    <string name="resume_successfully_created">Резюме успешно создано</string>
    <string name="vacancy_successfully_created">Вакансия успешно создана</string>
    <string name="post_successfully_created">Публикация успешно добавлена</string>
    <string name="view_vacancies">Посмотреть вакансии</string>
    <string name="response_to_vacancy">Откликнуться на вакансию</string>
    <string name="me_employer">Вакансии</string>
    <string name="download_resume">Скачать резюме</string>
    <string name="label_choose_theme">Выберите тематику</string>
    <string name="not_implemented">Данный функционал находится на стадии тестирования</string>
    <string name="label_courses">Курсы повышения квалификации</string>
    <string name="label_finance">Финансовая грамотность</string>
    <string name="label_legal">Законодательство</string>
    <string name="label_internet_friend">Интернет - друг педагога</string>
    <string name="label_care">С заботой о Вас</string>
    <string name="we_in_social">Мы в социальных сетях</string>
    <string name="label_choose_specialist">Выберите специалиста</string>
    <string name="label_legal_inspector">Правовой инспектор</string>
    <string name="label_labour_protection_specialist">Специалист по охране труда</string>
    <string name="label_economist">Экономист</string>
    <string name="label_methodist">Методист</string>
    <string name="label_psychologist">Психолог</string>
    <string name="label_question_to_experienced">Вопрос бывалому</string>
    <string name="answer_question">Вопрос - Ответ</string>
    <string name="advises">Советы</string>
    <string-array name="types_of_employment">
        <item>@string/full</item>
        <item>@string/partial</item>
    </string-array>
    <string name="social_link_vk">https://vk.com/mgo_profsoyuz</string>
    <string name="social_link_fb">https://www.facebook.com/mgoprofru/</string>
    <string name="social_link_instagram">https://www.instagram.com/pronm/</string>
    <string name="social_link_youtube">https://www.youtube.com/channel/UCOeWUQ0sy6oEP0zpKjbSplw</string>
    <string name="browser_not_found">На вашем устройстве не установлен браузер</string>
    <string name="ask_question_to_f">Задайте вопрос %1$s</string>
    <string name="to_specialist">специалисту</string>
    <string name="to_experienced">бывалому</string>
    <string name="pending_time">Время ожидания ответа: 24 часа</string>
    <string name="write_question">Напишите Ваш вопрос</string>
    <string name="send">Отправить</string>
    <string name="unknown_error">Ошибка</string>
    <string name="question_was_sent">Вопрос был отправлен</string>
    <string name="empty" />
    <string name="error_comments_send">При отправке комментария что-то пошло не так</string>
    <string name="all_tags">Все теги</string>
    <string name="trends">Тенденции</string>
    <string name="search_tags">Поиск тегов</string>
    <string name="attach_file">Выбрать файл</string>
    <string name="cancel">Отмена</string>
    <string name="add">Добавить</string>
    <string name="add_least_one_tag">Добавьте как минимум один тег</string>
    <string name="input_experience">Введите ваш опыт (в годах)</string>
    <string name="error_enter_valid_email">Введите корректный e-mail</string>
    <string name="input_phone">Введите корректный номер телефона</string>
    <string name="input_phone_or_email">Введите e-mail или номер телефона</string>
    <string name="district">Межрайон</string>
    <string name="trade_unionist">Член профсоюза</string>
    <string name="phone_number">Номер телефона</string>
</resources>