<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/createResumeEtCareerObjective"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normalControlsHeight"
            android:layout_marginEnd="@dimen/externalPadding"
            android:layout_marginStart="@dimen/externalPadding"
            android:layout_marginTop="@dimen/externalPadding"
            android:hint="@string/career_objective"
            android:lines="1" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/createResumeEtDistrictCouncil"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normalControlsHeight"
            android:layout_marginEnd="@dimen/externalPadding"
            android:layout_marginStart="@dimen/externalPadding"
            android:layout_marginTop="@dimen/externalPadding"
            android:inputType="numberDecimal"
            android:hint="@string/district_council"
            android:lines="1" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/createResumeEtEducation"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normalControlsHeight"
            android:layout_marginEnd="@dimen/externalPadding"
            android:layout_marginStart="@dimen/externalPadding"
            android:layout_marginTop="@dimen/externalPadding"
            android:hint="@string/education"
            android:lines="1" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/createResumeEtExperience"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normalControlsHeight"
            android:layout_marginEnd="@dimen/externalPadding"
            android:layout_marginStart="@dimen/externalPadding"
            android:layout_marginTop="@dimen/externalPadding"
            android:hint="@string/experience"
            android:lines="1" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/createResumeEtSalary"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normalControlsHeight"
            android:layout_marginEnd="@dimen/externalPadding"
            android:layout_marginStart="@dimen/externalPadding"
            android:layout_marginTop="@dimen/externalPadding"
            android:hint="@string/salary"
            android:lines="1" />

        <LinearLayout
            android:id="@+id/createResumeLAttachResume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacingMedium"
            android:layout_marginEnd="@dimen/externalPadding"
            android:layout_marginLeft="@dimen/spacingLarge"
            android:layout_marginRight="@dimen/spacingLarge"
            android:layout_marginStart="@dimen/externalPadding"
            android:layout_marginTop="@dimen/spacingMedium"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/createResumeTvAttachResume"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normalControlsHeight"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical|start"
                android:padding="@dimen/spacingMedium"
                android:layout_weight="1"
                android:text="@string/attach_file"
                android:textAppearance="?android:textAppearance" />

            <com.teachernavigator.teachernavigator.presentation.views.FileIconView
                android:id="@+id/createResumeVFileIcon"
                android:layout_width="wrap_content"
                android:layout_weight="0"
                android:layout_height="wrap_content" />

        </LinearLayout>



        <android.support.v7.widget.AppCompatButton
            android:id="@+id/createResumeBtnCreate"
            style="@style/Button"
            android:layout_width="@dimen/buttonAndTextWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/spacingXXXLarge"
            android:text="@string/create_resume"
            android:textAllCaps="false"
            app:backgroundTint="@color/orange" />

    </LinearLayout>
</ScrollView>